# backend/src/app.js
@@ -11,7 +11,7 @@ import notificationRoutes from "./routes/notification.routes.js";
 import buildingRoutes from "./routes/building.routes.js"
 import eventRoutes from "./routes/event.routes.js";
 import interventionRoutes from "./routes/intervention.routes.js";
-import calendarRoutes from "./routes/calendar.routes.js";
+//import calendarRoutes from "./routes/calendar.routes.js";
 
 import requestLogger from "./middleware/apiLogger.middleware.js";
 import rbacDecisionController from "./controllers/rbacDecision.controller.js";
@@ -120,7 +120,7 @@ app.use("/api/v1/notifications", notificationRoutes);
 app.use("/api/v1/buildings", buildingRoutes);
 app.use("/api/v1/events", eventRoutes);
 app.use("/api/v1/interventions", interventionRoutes);
-app.use("/api/v1/calendar", calendarRoutes);
+//app.use("/api/v1/calendar", calendarRoutes);
 
 
 export default app;
